Updated JDK to 21.0.0+35